added the completed html/css pages and images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ html, body {
     z-index: 1;
 }
 
+
 .name {
     display: block;
     background-color: #4aaaa5;
@@ -77,7 +78,13 @@ li {
     width: 960px;
     margin: 110px 0 100px 18%;
     padding-bottom: 20px;
-    
+}
+
+.portfolio {
+    background-color:#ffffff;
+    width: 960px;
+    margin: 110px 0 100px 18%;
+    padding-bottom: 20px;
 }
 
 .image {
@@ -129,7 +136,6 @@ li {
     width: 100%;
     height: 250px;
     box-shadow: 5px 5px 5px #1C403E;
-
 }
 
 .image-text {
@@ -144,7 +150,6 @@ li {
     right: 0;
 
 }
-
 
 .footer {
     position: fixed;
@@ -198,3 +203,317 @@ li {
 .submit:hover {
     box-shadow: 5px 5px 5px #1C403E;
 }
+
+
+@media screen and (max-width: 980px) {
+    body {
+        background-color: #1C403E;
+    }
+  
+    #header {
+        height: 40px;
+        width: 100%;
+        padding: 20px;
+    }
+
+    ul {
+        right: 2%;
+    }
+
+    .name {
+        width: 30%;
+        margin-left: 2%;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        margin-top: -19px;
+    }
+
+    .content {
+        width: 100%;
+    }
+
+    .about {
+        width: 70%;
+        margin-left: 3%;
+        margin-right: auto;
+   }
+    .content {
+        width: 66%;
+        position:absolute;
+        padding-right: 14px;
+        padding-left: 13px;
+        padding-bottom: 10px;
+        margin: 0% 0% 10% 0%;
+    }
+
+    .footer {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+    }
+    .copyright {
+        position: absolute;
+        bottom: 0;
+        left: 47.3%;
+    }
+
+    .contact-form {
+        width: 66%;
+        position:absolute;
+        padding-right: 17px;
+        padding-left: 11px;
+        padding-bottom: 10px;
+        margin: 0% 0% 10% 0%;
+    }
+
+    .form-control {
+        width: 100%;
+    }
+
+    .submit {
+        width: 15%;
+    }
+
+    .portfolio {
+        width: 70%;
+        margin-left: 3%;
+        margin-right: auto;
+    }
+
+    .portfolio-container {
+        width: 100%;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
+
+    }
+
+    .column {
+        width: 45%;
+        margin-left: 3%;
+    }
+
+    .column-2 {
+        width: 45%;
+        float: right;
+        margin-right: 3%;
+    }
+     
+  
+  }
+  
+  
+  @media screen and (max-width: 768px) {
+    body {
+      background-color: #1C403E;
+    }
+  
+    #header {
+      height: 50px;
+      width: 100%;
+      padding: 10px;
+    }
+
+    ul {
+        right: 2%;
+    }
+
+    .name {
+        width: 30%;
+        margin-left: 2.8%;
+        padding-top: 4px;
+        padding-bottom: 0px;
+        margin-top: -13px;
+    }
+  
+   .about {
+        width: 95%;
+        margin-left: 3%;
+        margin-right: auto;
+       
+   }
+
+   .portfolio {
+        width: 95%;
+        margin-left: 3%;
+        margin-right: auto;
+   }
+   
+   .content {
+      width: 90%;
+      position:absolute;
+      padding-right: 13px;
+      padding-left: 10px;
+      padding-bottom: 10px;
+      margin: 0% 0% 10% 0%;
+    }
+
+    .image {
+        width: 50%;
+        height: 275px;
+        margin-bottom: 2px;
+    }
+
+    .contact-form {
+        width: 90%;
+        position:absolute;
+        padding-right: 13px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        margin: 0% 0% 10% 0%;
+      }
+
+      .form-control {
+          width: 100%;
+      }
+
+      .copyright {
+        position: absolute;
+        bottom: 0;
+        left: 47.3%;
+    }
+
+    .portfolio-container {
+        width: 98%;
+        margin-bottom: 10px;
+        margin-left: 0px;
+        margin-right: 0px;
+
+    }
+
+    .column {
+        width: 45%;
+        margin-left: 3%;
+    }
+
+    .column-2 {
+        width: 45%;
+        float: right;
+        margin-right: 3%;
+    }
+
+  
+  }
+  
+  @media screen and (max-width: 640px) {
+    body {
+        background-color: #1C403E;
+    }
+
+    #header {
+        position: fixed;
+        background-color: #4aaaa5;
+        width: 100%;
+        padding: 20px;
+        height: 25px;
+
+      }
+
+    .name {
+        position: absolute;
+        display: block;
+        background-color: #4aaaa5;
+        color: white;
+        width: 100%;
+        height: 100%;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        margin-left: -6%;
+        margin-top: -20px;
+    }
+
+    ul {
+        position: relative;
+        display: block;
+        background-color: white;
+        width: 100%;
+        height: 40px;
+        justify-content: center;
+        margin-top: 20px;
+        float: none;
+        right:4%;
+
+    }
+
+    li {
+        float: none;
+        display: inline-block;
+        margin-left: 14%;
+        padding-top: 2%;
+        margin-right: auto;
+        
+    }
+
+    .about {
+        width: 100%;
+        margin: 25% 0% 5% 0%;
+      }
+
+    .portfolio {
+        width: 90%;
+        margin: 25% 0% 5% 5%;
+      }
+
+    .content {
+          width: 94%;
+          position:absolute;
+          padding-right: 12px;
+          padding-left: 10px;
+          padding-bottom: 10px;
+          margin: 0% 0% 10% 0%;
+      }
+
+    .image {
+        float: none;
+        width: 100%;
+        height: 275px;
+        margin-bottom: 3%;
+        margin-right: 15px;
+        box-shadow: 5px 5px 5px #1C403E;
+      }
+
+    .contact-form {
+        width: 94%;
+        position:absolute;
+        padding-right: 12px;
+        padding-left: 10px;
+        padding-bottom: 10px;
+        margin: 0% 0% 10% 0%;
+      }
+
+    .form-control {
+        width: 100%;
+      }
+
+    .portfolio-container {
+        margin-bottom: 10px;
+        width: 94%;
+      }
+
+    .column {
+        width: 80%;
+        margin-left: 12%;
+      }
+
+    .column-2 {
+        float: none;
+        width: 80%;
+        margin-left: 12%;
+      }
+
+    .footer {
+        height: 30px;
+      }
+
+    .copyright {
+        position: absolute;
+        bottom: 0;
+        left: 46%;
+    }
+
+    .portfolio-image {
+        width: 100%;
+        height: 250px;
+    }
+    
+  }
